Fix responsive bug for social links bar
A scrollbar used to appear on mobile devices

--- a/css/devstate.less
+++ b/css/devstate.less
@@ -74,7 +74,6 @@ body{
   margin-top:1%;
   text-decoration:none;
 }
-/*width:160px;*/
 
 #logoimage{
   width:160px;
@@ -318,6 +317,10 @@ footer{
   height:300px;
 }
 
+#socialBar{
+  height:250px;
+}
+
 
 
 
@@ -427,6 +430,11 @@ footer{
   footer{
     height:400px;
   }
+
+  #socialBar{
+    height:350px;
+  }
+
 }
 
 @media only screen and (max-width: 510px) {
